// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-w8sz4c css-1mm2cvy-View egi4jkx0"
+   class="components-surface css-10jei3p css-1mm2cvy-View egi4jkx0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderLeft 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-1rsk61w css-1mm2cvy-View egi4jkx0"
+   class="components-surface css-10jei3p css-1mm2cvy-View egi4jkx0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderRight 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-1k4iwhs css-1mm2cvy-View egi4jkx0"
+   class="components-surface css-10jei3p css-1mm2cvy-View egi4jkx0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderTop 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-l7n8r9 css-1mm2cvy-View egi4jkx0"
+   class="components-surface css-10jei3p css-1mm2cvy-View egi4jkx0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borders 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-1dxo3zh css-1mm2cvy-View egi4jkx0"
+   class="components-surface css-10jei3p css-1mm2cvy-View egi4jkx0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  background-color: #ffffff;
  background-color: var(--wp-g2-surface-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  position: relative;
  --wp-g2-surface-background-size: 12px;
  --wp-g2-surface-background-size-dotted: 11px;
}

<div
  class="components-surface emotion-0 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="Surface"
>
  Surface
</div>
`;

exports[`props should render variants 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-1dajkma css-1mm2cvy-View egi4jkx0"
+   class="components-surface css-10jei3p css-1mm2cvy-View egi4jkx0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;
